fix(donation-progress): aligns donation percentage center

--- a/src/components/donation-progress/donation-progress.less
+++ b/src/components/donation-progress/donation-progress.less
@@ -11,6 +11,7 @@
 
 	&__progress-indicator {
 		margin-bottom: @margin-double;
+		text-align: center;
 
 		@media @m {
 			background: url('/assets/icons/progress-line.svg') top 100px center / 910px 962px no-repeat;
